add conditional titles in nav header

--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -250,5 +250,10 @@ $canvas-offset: .5;
   margin: 0;
 }
 
+.page-title {
+  color: white;
+  font-size: 2rem;
+  display: inline-block;
+}
 
 // END NAV*************
