--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -46,6 +46,7 @@
       <%= image_tag("Icon_final.png", :class => "navbar-logo") %>
     <% end %>
   </div>
+  <span class="page-title"><%= @title || "AccessFuel" %></span>
 </header>
 
 <script>
