--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,12 +1,10 @@
 <body class="events-page">
-
+<% @title = "Events" %>
 <div class="off-canvas">
 <%= render 'nav_bar' %>
 
 <!-- Events Listing Container-->
 <div class="subnav btn-group btn-group-justified">
-	<!-- <div class="row row_filter text-center"> -->
-		<!-- <div class="column col-xs-12 text-center filters_column"> -->
 
 <!-- Dropdown Menu for Category Filters -->
 				<div class="btn-group">
