--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -196,7 +196,7 @@ $canvas-offset: .5;
 
 .nav-primary {
 
-  background: rgba(30,30,30,1);
+  background: #303030;
   @include off-canvas-nav;
   
   ul {
@@ -211,7 +211,7 @@ $canvas-offset: .5;
     padding: 1.5rem 2rem;
     line-height: 1;
     list-style: none;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid #888888;
     @media screen and (min-width: 768px) {
       display: inline-block;
       padding: .25rem 2rem;
@@ -219,11 +219,11 @@ $canvas-offset: .5;
   }
   
   a {
-    color: #fff;
-    font-weight: bold;
+    color: #fcfcfc;
     text-decoration: none;
     padding: .5rem 0;
     display: block;
+    font-weight: 100;
   }
   
 }
