--- a/app/assets/stylesheets/events_show.css.scss
+++ b/app/assets/stylesheets/events_show.css.scss
@@ -2,7 +2,7 @@ body.event-details {
   ul {
     padding: 0px;
   }
-  
+
   #whole_thang {
     padding-left: 15px;
     padding-right: 15px;
@@ -49,10 +49,23 @@ body.event-details {
     margin-top: 15px;
   }
 
+  .rsvp-social-button {
+    background-color: #ececec;
+    height: 34px;
+    .glyphicon.glyphicon-star-empty {
+      color: black;
+    }
+  }
+
+  .rsvp-button {
+    background-color: #ececec;
+    color: #2e98c9;
+  }
+
   .google-cal {
-    padding-top: 11px;
-    padding-left: 11px;
-    font-size: 1.25em;
+    // padding-top: 11px;
+    // padding-left: 11px;
+    // font-size: 1.25em;
   }
 
   .google-cal > p {
@@ -83,21 +96,6 @@ body.event-details {
   .fa-users, .rsvp_badge, .fa-calendar, .fa-heart {
     color: black;
   }
-  
-  .fa {
-    font-size: 1.4em;
-    margin-top: 3px;
-  }
-
-  .rsvp-modal {
-    font-size: 1.4em;
-    margin-top: 3px;
-  }
-
-  button.fa-calendar{
-    margin-top: .1em;
-    font-size: 1.65em;
-  }
 
   .modal-content {
     color: black;
@@ -113,11 +111,6 @@ body.event-details {
     margin-bottom: -10px;
     margin-top: 10px;
     font-size: 1.5em;
-  }
-
-  .rsvp {
-    font-size: 3em;
-    margin-left: -21px;
   }
 
   .badge_show{
