--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -14,50 +14,57 @@
 				</div>
 			</div>
 
-			<!-- Middle Navigation -->
-			<nav id="bottom_nav">
-			  <div class="container show-container-margintop">
-					 <div class="row">
-						<div class="col-xs-4 google-cal">
-						<%start_time = @event.event_date.utc.strftime('%Y%m%dT%H%M00Z')%>
-						<%new_time = @event.event_date.utc + 1.hour %>
-						<%end_time = new_time.strftime('%Y%m%dT%H%M00Z')%>
-							<p><button class="btn btn-default fa fa-calendar" onclick="window.open('https://www.google.com/calendar/render?action=TEMPLATE&text=Your+ <%=@event.name%> &dates=<%=start_time%>/<%=end_time%>&details=For+details,+link+here:+<%=@event.url%>&location=<%=@event.venue%>&sf=true&output=xml', '_blank')"></button>
-								<!-- <i class="fa fa-heart"></i> -->
-							</p>
-						</div>
-						<div class="col-xs-4" data-no-turbolink>
-							<% if @event.url.present? %>
-								<%= link_to "RSVP", @event.url, class: "rsvp btn btn-default" %>
-							<% else %>
-								<%= button_to "RSVP", event_path(@event), class: "rsvp btn btn-default" %>
-							<% end %>
-						</div>
-						<div class="col-xs-4 text-right attendees-btn">
-							<p>
-								<button data-toggle="modal" data-target=".rsvp-modal-lg" class="btn btn-default"><i class="fa fa-users rsvp-modal"></i>
-								<i class="rsvp_badge"> <%= @count %> </i></button>
-							</p>
-							<div class="modal fade rsvp-modal-lg" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-								<div class="modal-dialog modal-lg">
-									<div class="modal-content">
-										<div class="modal-header">
-											<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-											<h4 class="text-center" id="myModalLabel">RSVP Attendees</h4>
-										</div>
-										<div class="modal-body">
-											<ol><% @rsvp_names.each do |name| %>
-												<li><%= name %></li>
-												<% end %>
-											</ol>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+			<!-- Social Event Nav Button Panel -->
+			<div class="btn-group btn-group-justified">
+			  <div class="btn-group">
+			    <!-- Favorite Button -->
+		      <% if current_user %>
+		        <button type="button" class="btn btn-default likebutton rsvp-social-button"><span class="glyphicon glyphicon-star-empty"></span></button>
+
+		      <% else %>
+		        <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-default likebutton rsvp-social-button"><span class="glyphicon glyphicon-star-empty"></span></button>
+		      <% end %>
 			  </div>
-			</nav>
+			  <div class="btn-group">
+			    <%start_time = @event.event_date.utc.strftime('%Y%m%dT%H%M00Z')%>
+					<%new_time = @event.event_date.utc + 1.hour %>
+					<%end_time = new_time.strftime('%Y%m%dT%H%M00Z')%>
+					<button class="btn btn-default fa fa-calendar rsvp-social-button" onclick="window.open('https://www.google.com/calendar/render?action=TEMPLATE&text=Your+ <%=@event.name%> &dates=<%=start_time%>/<%=end_time%>&details=For+details,+link+here:+<%=@event.url%>&location=<%=@event.venue%>&sf=true&output=xml', '_blank')"></button>
+			  </div>
+			  <div class="btn-group">
+	    		<% if @event.url.present? %>
+						<%= link_to "RSVP", @event.url, class: "rsvp btn btn-default rsvp-button" %>
+					<% else %>
+						<%= button_to "RSVP", event_path(@event), class: "rsvp btn btn-default rsvp-button" %>
+					<% end %>
+			  </div>
+			  <div class="btn-group">
+			    <button data-toggle="modal" data-target=".rsvp-modal-lg" class="btn btn-default rsvp-social-button">
+			    	<i class="fa fa-users rsvp-modal"></i>
+						<i class="rsvp_badge"> <%= @count %> </i>
+					</button>
+			  </div>
+			</div>
+
+		<!-- rsvp modal -->
+		<div class="modal fade rsvp-modal-lg" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+						<h4 class="text-center" id="myModalLabel">RSVP Attendees</h4>
+					</div>
+					<div class="modal-body">
+						<ol><% @rsvp_names.each do |name| %>
+							<li><%= name %></li>
+							<% end %>
+						</ol>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- rsvp modal -->
+
 			<div class="container-show">
 			<div class="row">
 				<div class="col-md-12 text-center">
