--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -201,6 +201,7 @@ $canvas-offset: .5;
   
   ul {
     text-align: left;
+    padding-left: 0px;
     @media screen and (min-width: 768px) {
       text-align: center;
     }
