--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -249,6 +249,17 @@ $canvas-offset: .5;
   display: inline-block;
   padding: 0;
   margin: 0;
+  padding-top: 5px;
+}
+
+.hamburger-bar {
+  background-color: white;
+  width: 30px;
+  height: 3px;
+  margin: 7px;
+  &:last-of-type {
+    margin-bottom: 0px; 
+  }
 }
 
 .page-title {
