--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -26,21 +26,21 @@
       </div>
 
       <div class="col-md-4 col-sm-4 col-xs-3" id="column2">
+        <!-- Favorite Button -->
+        <% if current_user %>
+          <button type="button" class="btn btn-default likebutton"><span class="glyphicon glyphicon-star-empty"></span></button>
+
+        <% else %>
+          <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-default likebutton"><span class="glyphicon glyphicon-star-empty"></span></button>
+        <% end %>
         <% if event.group_photo.present? %>
           <% photo = event.group_photo %>
         <% else %>
           <% photo = "/assets/Icon_final2.png" %>
         <% end %>        
         <img src="<%= photo %>" class="event_photo_index text-centered">
-          <br>
-<!-- Favorite Button -->
-      <% if current_user %>
-        <button type="button" class="btn btn-default likebutton"><span class="glyphicon glyphicon-star-empty"></span></button>
-
-      <% else %>
-        <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-default likebutton"><span class="glyphicon glyphicon-star-empty"></span></button>
-      <% end %>
-
+        <div class="event_photo_overlay">
+        </div>
       </div>
 
     </div>
