--- a/app/views/events/favorite.html.erb
+++ b/app/views/events/favorite.html.erb
@@ -1,9 +1,6 @@
-<body class="favorites-page">
-
-<div class="off-canvas">  
+<body class="events-page">  
   <%= render 'events/nav_bar' %>
 <div class="temp-fave-header"></div>
   <%= render 'events/events' %>
 
-</div> <!-- /.off-canvas -->
 </body>
