--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,5 @@
 <body class="events-page">
 <% @title = "Events" %>
-<div class="off-canvas">
 <%= render 'nav_bar' %>
 
 <!-- Events Listing Container-->
@@ -51,7 +50,7 @@
 	<%= render "events/events" %>
 </div>
 
-</div>
+</body>
 <!-- End of Event Listing container -->
 
 <!-- AJAX calls to filtered events -->
