add favorites button to event detail page

--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -20,7 +20,7 @@ body.events-page {
     top: 30px;
     background: transparent;
     span {
-      color: dimgray
+      color: mintcream;
     }
   }
 
