add favorites button to event detail page

--- a/app/views/users/setting.html.erb
+++ b/app/views/users/setting.html.erb
@@ -1,7 +1,7 @@
 
 <div class="signUpScreen" id="welcomeBackground"> 
   <div class="overlay2">
-    <% @title = "Events" %>
+    <% @title = "Select Category" %>
 <%= render 'events/nav_bar' %>
   <%= form_for :user do |f| %>
     <div class="interest-container">
