--- a/app/views/events/favorite.html.erb
+++ b/app/views/events/favorite.html.erb
@@ -1,4 +1,5 @@
 <body class="events-page">  
+  <% @title = "Favorite Events" %>
   <%= render 'events/nav_bar' %>
 <div class="temp-fave-header"></div>
   <%= render 'events/events' %>
