add favorites button to event detail page

--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -18,6 +18,7 @@ body.events-page {
     z-index: 2;
     position: absolute;
     top: 30px;
+    left: 25%;
     background: transparent;
     span {
       color: mintcream;
