--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,5 +1,8 @@
 <h1>New answer</h1>
 
-<%= render 'form' %>
+<%= form_for [@question, @answer] do |f| %>
+   <%= f.text_field :answer_params %>
+   <%= f.submit %>
+<% end %>
 
 <%= link_to 'Back', answers_path %>
