--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -32,7 +32,8 @@
       <a data-toggle="modal" data-target="#myModal2">Log in</a>
     </li>
     <li>
-      <a data-toggle="modal" data-target="#myModal">Sign Up</a>
+      <!-- <a data-toggle="modal" data-target="#myModal">Sign Up</a> -->
+      <%= link_to "Sign Up", new_user_path %>
     </li>
     <% end %>
   </ul>
