--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <body class="users-new">
-<%= render 'nav_bar' %>
+<%= render 'events/nav_bar' %>
 <h1> Registration </h1>
 
   <%= form_for @user do |f| %>
@@ -12,14 +12,26 @@
       </ul>
   <% end %>
 
-<div class="registration_form">
-    <%= f.label :email %>
-    <%= f.text_field :email %><br>
 
-    <%= f.label :password %>
-    <%= f.password_field :password %><br>
+<div>
+  <div class="form-group">
+    <div class="col-sm-12">
+      <label class="label-control">
+        <%= f.label :email %>
+      </label>
+      <%= f.text_field :email, class: 'form-control' %>
+    </div>
 
-    <%= f.submit "Register", class: "btn btn-default" %>
+    <div class="col-sm-12">
+      <%= f.label :password %>
+      <%= f.password_field :password, class: 'form-control' %><br>
+    </div>
+  </div>
 
+  <div class="form-group">
+    <div class="col-sm-12 text-center">
+      <%= f.submit "Register", class: "btn btn-default btn-lg btn-primary" %>
+    </div>
+  </div>
   <% end %>
 </div>
