--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -29,7 +29,8 @@
     </li>
     <% else %>
     <li>
-      <a data-toggle="modal" data-target="#myModal2">Log in</a>
+      <%= link_to "Log In", login_path %>
+      <!-- <a data-toggle="modal" data-target="#myModal2">Log in</a> -->
     </li>
     <li>
       <!-- <a data-toggle="modal" data-target="#myModal">Sign Up</a> -->
