adding question in db

--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New answer</h1>
 
 <%= form_for [@question, @answer] do |f| %>
-   <%= f.text_field :answer_params %>
+   <%= f.text_field :response %>
    <%= f.submit %>
 <% end %>
 
