--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,8 @@
 <body class="event-details">
+<% @navclass = "event-details-menu" %>
 <% @title = "Event Details" %>
 <div class="off-canvas">	
-<%= render 'events/nav_bar' %>
+<%= render 'events/show_nav' %>
 
 <!-- Container for event photo and description -->
 	<div id="whole_thang">
