--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,7 +7,12 @@
 
 <!-- Dropdown Menu for Category Filters -->
 				<div class="btn-group">
-						<button type="button" id="fav" class="btn btn-default cc" onclick="fav();">Favorites</button>
+						<button type="button" class="btn btn-default cc" onclick="fav();" data-intro="Discover Events" data-position="bottom">All Events</button>
+				</div>
+
+<!-- Dropdown Menu for Category Filters -->
+				<div class="btn-group">
+						<button type="button" id="fav" class="btn btn-default cc" onclick="fav();" data-intro="Press the &#9734; to Add to Favorites" data-position="bottom">Favorites</button>
 				</div>
 
 <!-- Dropdown Menu for Dates Filters -->
@@ -49,6 +54,21 @@
 <div id="filtered_events">
 	<%= render "events/events" %>
 </div>
+
+	<!-- instructional overlay test -->
+    <!-- <div class="container">
+      <div class="jumbotron">
+        <h1 data-intro="Project title" data-position="right">Chardin.js</h1>
+        <p class="lead">
+          Simple overlay instructions for your apps.
+        </p>
+        <img src="img/chardin.png" data-intro="An awesome 18th-century painter, who found beauty in everyday, common things." data-position="right" />
+        <a href="#" class="btn btn-large primary" data-toggle="chardinjs" data-intro="This button toggles the overlay, you can click it, even when the overlay is visible" data-position="left">See it in action</a>
+        <a href="" id="opentour" class="hide" data-toggle="chardinjs">Or open it again</a>
+      </div>
+    </div> -->
+
+    <!-- /overlay test -->
 
 </body>
 <!-- End of Event Listing container -->
@@ -117,7 +137,33 @@ function date_change(date) {
 </script>
 
 
+<!-- overlay test -->
+<!--script>
+// $(document).ready(function() {
+//   $(function() {
+//     $('body').chardinJs();
+//     $('a[data-toggle="chardinjs"]').on('click', function(e) {
+//       e.preventDefault();
+//       if ($('.jumbotron img').is(':visible')) {
+//         return ($('body').data('chardinJs')).toggle();
+//       } else {
+//         return $('.jumbotron img').animate({
+//           height: 250
+//         }, 600, function() {
+//           return ($('body').data('chardinJs')).toggle();
+//         });
+//       }
+//     });
+//     return $('body').on('chardinJs:stop', function() {
+//       $('a.btn.primary').off('click').text('See more on Github').attr('href', 'https://github.com/heelhook/chardin.js');
+//       return $('a#opentour').css({
+//         display: 'block'
+//       });
+//     });
+//   });
 
+// }).call(this);
+</script-->
 
 
 
