--- a/app/views/application/ga.html.erb
+++ b/app/views/application/ga.html.erb
@@ -1,7 +1,30 @@
-<h1>GA</h1>
-<h1>GA</h1>
-<h1>GA</h1>
-<h1>GA</h1>
-<h1>GA</h1>
-<h1>GA</h1>
-<h1>GA</h1>
+<% @title = "General Assembly" %>
+<%= render 'events/nav_bar' %>
+<div class="ga-body">
+
+<div class="ga-content ga-header">Welcome to the General Assembly page on AccessFuel.</div>
+
+<div class="ga-logo-container">
+  <%= image_tag("GA_logo.svg", :class => "ga-partnership-logo") %>
+</div>
+<div class="ga-logo-container">
+  <%= image_tag("Icon_final.png", :class => "af-partnership-logo") %>
+</div>
+
+<div class="ga-content">
+  <div class="ga-subheader">Get access to:</div>
+
+<div class="ga-bullet-points">
+  <span class="ga-number">1.</span> GA Alumni events, networking and connection on the GA-LA meetup page.
+</div>
+<div class="ga-bullet-points">
+  <span class="ga-number">2.</span> Discover great networking events (including GA events).
+  <br>
+  <%= link_to(events_path) do %>
+    View more
+  <% end %>
+</div>
+
+</div>
+
+</div><!-- /.ga-body -->
