--- a/app/assets/stylesheets/ga.css.scss
+++ b/app/assets/stylesheets/ga.css.scss
@@ -1,6 +1,6 @@
 .ga-body {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   color: white;
   text-shadow: 2px 2px #000000;
   background-image: url(http://666a658c624a3c03a6b2-25cda059d975d2f318c03e90bcf17c40.r92.cf1.rackcdn.com/unsplash_52d5b2dfdf619_1.JPG);
@@ -15,16 +15,16 @@
   background-color: darkgoldenrod;
   display: inline-block;
   text-align: center;
-  padding: 3px;
+  padding: 5px;
 }
 
 .ga-content {
-  padding: 50px;
+  padding: 40px;
 }
 
 .ga-header {
   padding-top: 100px;
-  font-size: 40px;
+  font-size: 35px;
 }
 
 .ga-subheader {
@@ -33,8 +33,10 @@
 }
 
 .ga-bullet-points {
-  font-size: 28px;
+  font-size: 25px;
   margin-bottom: 10px;
+  line-height: 35px;
+  vertical-align: bottom;
 }
 
 .ga-logo-container {
