Added meetup link

--- a/app/views/application/ga.html.erb
+++ b/app/views/application/ga.html.erb
@@ -16,6 +16,9 @@
 
 <div class="ga-bullet-points">
   <span class="ga-number">1.</span> GA Alumni events, networking and connection on the GA-LA meetup page.
+  <%= link_to("http://www.meetup.com/General-Assembly-Alumni-in-Los-Angeles-GA-LA/") do %>
+    View more
+  <% end %>
 </div>
 <div class="ga-bullet-points">
   <span class="ga-number">2.</span> Discover great networking events (including GA events).
