--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,50 +1,29 @@
 <h1>New answer</h1>
-<%= @event.id %>
-<% @qs.each do |q| -%>
-    <% if q.event_id == @event.id %>
+<%= form_for @answer do |x| %>
+   <!--  <%= fields_for @event do |f| %>
+  
     <p>
-        <%= q.id %> 
-    </p>
-    <% end %>
-<% end -%>
-<%= form_for [@answer] do |f| %>
-   
-   
-   <%= f.hidden_field :event_id, :value => params[:id]  %>
+      <%= f.label :name %><br />
+      <%= f.text_field :name %>
+    </p> -->
+    	<%= f.fields_for :questions do |b| %>
+    <p>
+    
+  	 	<%= b.text_field :poll%><br />
+  			
+  				
+  				<%= x.text_field :response %>
+  				
+  				
+  			
+			<% end %>
+  
+</p>
 
-
-
-    		<p>
-        		
-
-
-
-
-        		<%= f.fields_for :qs do |builder| %>
-
-        			   <% @qs.each do |q| -%>
-    					<% if q.event_id == @event.id %>
-    					<%= q.id %> 
-		    				<%= f.text_field :response %>
-		    				<%= f.hidden_field :event_id, :value => params[:id]  %>
-    					<% end %>
-  					   <% end -%>
-
-  				<% end %>
-
-
-
-    		</p>
-    	
-
-
-
-
-	
-
-   
-   
-   <%= f.submit %>
+  <!-- <p>  
+  <% end %>
+  <p> -->
+  <%= x.submit "submit"%>
 <% end %>
 
 <%= link_to 'Back', answers_path %>
