--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -25,7 +25,7 @@
 					</div>
 					<div class="col-xs-4 rsvp-class">
 						
-							<%= link_to "RSVP", controller: 'answers', action: "new", id: @event.id, qid: @qs %>
+							<%= link_to "RSVP", controller: 'events', action: "question", id: @event.id%>
 						
 					</div>
 					<% if current_user.present? %>
