updated home af logo

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -56,7 +56,7 @@ body {
 
   .welcomeLogo {
     margin: 0 auto;
-    background-image: url('Logo_final.png');
+    background-image: url('Logo_alt.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
