--- a/app/views/application/ga.html.erb
+++ b/app/views/application/ga.html.erb
@@ -23,7 +23,7 @@
 <div class="ga-bullet-points">
   <span class="ga-number">2.</span> Discover great networking events (including GA events).
   <br>
-  <%= link_to(events_path) do %>
+  <%= link_to(root_path) do %>
     View more
   <% end %>
 </div>
