--- a/app/assets/stylesheets/ga.css.scss
+++ b/app/assets/stylesheets/ga.css.scss
@@ -1,6 +1,7 @@
 .ga-body {
   width: 100vw;
   height: 100%;
+  min-height: 100vh;
   color: white;
   text-shadow: 2px 2px #000000;
   background-image: url(http://666a658c624a3c03a6b2-25cda059d975d2f318c03e90bcf17c40.r92.cf1.rackcdn.com/unsplash_52d5b2dfdf619_1.JPG);
