--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -1,7 +1,10 @@
 <% is_fav = params[:time_period]=="fav" %>
 
 <% if is_fav && @info.empty? %>
-  <p class="error">"You don't have any events saved yet. Please select events of interest to you."</p>
+  <p class="error">
+    <span class="error-icon">!</span>
+    You don't have any events saved yet. Please select events of interest to you.
+  </p>
 <% end %>
 
 <div data-role="main" class="container-fluid">
