--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -100,6 +100,10 @@ body.events-page {
   .btn.btn-default {
     display: block;
     // width: auto;
+    &:hover, &:active {
+      background-color: darken(#f2ecd6, 20%);
+      border-bottom: 2px solid darken(#ef5529, 20%);
+    }
   }
 }
 
