begin cleaning up events index action

--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -11,44 +11,44 @@
   <% counter = 0 %>
   <% @events.each do |event| %>
     <% counter += 1 %>
-  <div class="event_wrapper <%=event.id%>">
-     <div class="row row_events">
-      <div class="col-md-8 col-sm-8 col-xs-8" id="column1">
-        <ul id="col1">
-          <li class="event_header">
-          <%= link_to truncate(event.name, length: 70, separator: ' '), event_path(event) %>
+    <div class="event_wrapper <%=event.id%>">
+      <div class="row row_events">
+        <div class="col-md-8 col-sm-8 col-xs-8" >
+          <ul>
+            <li class="event_header">
+              <%= link_to truncate(event.name, length: 70, separator: ' '), event_path(event) %>
+            <li class="location"><%= truncate(event.venue, length: 30) %> <%= truncate(event.city, length: 25) %></li>
+            <li>
+              <% if event.group.present? %>
+                <p class="group_info">Hosted by <%= event.group %></p>
+              <% end %>
+            </li>
+          </ul>
+        </div>
 
-
-          <li class="location"><%= truncate(event.venue, length: 30) %> <%= truncate(event.city, length: 25) %></li>
-          <li>
-          <% if event.group.present? %>
-            <p class="group_info">Hosted by <%= event.group %></p>
+        <div class="col-md-4 col-sm-4 col-xs-4">
+          <!-- Favorite Button -->
+          <% if current_user %>
+            <button type="button" class="btn btn-default likebutton">
+              <span class="glyphicon glyphicon-star"></span>
+            </button>
+          <% else %>
+            <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-default likebutton">
+              <span class="glyphicon glyphicon-star"></span>
+            </button>
           <% end %>
-          </li>
-        </ul>
-      </div>
-
-      <div class="col-md-4 col-sm-4 col-xs-4" id="column2">
-        <!-- Favorite Button -->
-        <% if current_user %>
-          <button type="button" class="btn btn-default likebutton"><span class="glyphicon glyphicon-star"></span></button>
-
-        <% else %>
-          <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-default likebutton"><span class="glyphicon glyphicon-star"></span></button>
-        <% end %>
-        <% if event.group_photo.present? %>
-          <% photo = event.group_photo %>
-        <% else %>
-          <% photo = "/assets/Icon_final2.png" %>
-        <% end %>        
-        <img src="<%= photo %>" class="event_photo_index text-centered">
-        <div class="event_photo_overlay">
+          <% if event.group_photo.present? %>
+            <% photo = event.group_photo %>
+          <% else %>
+            <% photo = "/assets/Icon_final2.png" %>
+          <% end %>        
+          <img src="<%= photo %>" class="event_photo_index text-centered">
+          <div class="event_photo_overlay">
+          </div>
         </div>
       </div>
 
     </div>
-
-  </div>
   <% end %>
 </div>
 
@@ -87,33 +87,33 @@
 
 
 <script>
-$(document).ready(function(){
+  $(document).ready(function(){
 
-  $( ".likebutton" ).on( "click", swiperightHandler );
+    $( ".likebutton" ).on( "click", swiperightHandler );
 
-  function swiperightHandler( event ){
-    // $( event.target ).parents(".event_wrapper").toggleClass( "yellow" );
-    var e = $(this).closest('.event_wrapper')
-    var info = e[0].classList[1]
-    var num = parseInt(info)
-    checkCookie(num);
-    alert(e[0].innerText + 'has been added to your favorites.');
-    e.delay(800).fadeOut("slow");
+    function swiperightHandler( event ){
+      // $( event.target ).parents(".event_wrapper").toggleClass( "yellow" );
+      var e = $(this).closest('.event_wrapper')
+      var info = e[0].classList[1]
+      var num = parseInt(info)
+      checkCookie(num);
+      alert(e[0].innerText + 'has been added to your favorites.');
+      e.delay(800).fadeOut("slow");
+    }
+  });
+
+  </script>
+
+  <script>
+  var matches = []
+  var d = document.getElementsByClassName('event_wrapper');
+  for (var i=0; i<d.length; i++) {
+    var id = parseInt(d[i].classList[1])
+    if (document.cookie.indexOf('id' + id)!= -1) {
+      d[i].className += " yellow";
+      matches.push(id);
+    }
   }
-});
-
-</script>
-
-<script>
-var matches = []
-var d = document.getElementsByClassName('event_wrapper');
-for (var i=0; i<d.length; i++) {
-  var id = parseInt(d[i].classList[1])
-  if (document.cookie.indexOf('id' + id)!= -1) {
-    d[i].className += " yellow";
-    matches.push(id);
-  }
-}
 </script>
 
 
