--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -1,4 +1,12 @@
 <nav class="nav-primary" id="nav-primary">
+  <div class="af-events">
+    <div class="logo">
+      <a href="/events">
+        <img alt="Icon final" class="navbar-logo" src="/assets/Icon_final.png">
+      </a>
+    </div>
+    <span class="page-title">Events</span>
+  </div>
   <ul>
     <li><a href="/users/setting">Select Category</a></li>
     <li>
