--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -29,7 +29,7 @@
           </ul>
         </div>
 
-        <div class="col-md-4 col-sm-4 col-xs-4">
+        <div class="col-md-4 col-sm-4 col-xs-4 text-center photo-wrapper">
           <!-- Favorite Button -->
           <% if current_user %>
             <button type="button" class="btn btn-default likebutton">
@@ -40,17 +40,14 @@
               <span class="glyphicon glyphicon-star"></span>
             </button>
           <% end %>
-          <% if event.group_photo.present? %>
-            <% photo = event.group_photo %>
-          <% else %>
-            <% photo = "/assets/Icon_final2.png" %>
-          <% end %>        
-          <img src="<%= photo %>" class="event_photo_index text-centered">
+          <div class = "img-container">
+            <%= image_tag event.group_photo.present? ? event.group_photo : 'Icon_final2.png', class: "event_photo_index" %>
+            <!-- could use ERB -->
+          </div>
           <div class="event_photo_overlay">
           </div>
         </div>
       </div>
-
     </div>
   <% end %>
 </div>
